# Firmware_Shell

./: .gitignore  CMakeLists.txt  README.md  automate.py  impl.h  impl_pc.c  impl_stm32h563zi.c  main.c  shell_commands.c
shell/: shell.c
tests/: main.cpp  shell_commands_test.cpp
